# warehouse-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py  config.json  main.cpp
modules/Core/: Application.cpp  Application.h  CMakeLists.txt
modules/Database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Entities.h  Queries.h
modules/Models/: CMakeLists.txt  ProductManager.cpp  ProductManager.h  StorageManager.cpp  StorageManager.h  TransactionManager.cpp  TransactionManager.h
modules/Services/: CMakeLists.txt  ConfigService.cpp  ConfigService.h  ValidationService.h
modules/UI/: CMakeLists.txt  ConsoleUI.cpp  ConsoleUI.h  DisplayFormatter.h  MenuItems.h
modules/Utils/: CMakeLists.txt  Logger.cpp  Logger.h
scripts/: build.sh  clean_conan_cache.sh  rebuild.sh  run_tests.sh  run_tests_with_coverage.sh
tests/: CMakeLists.txt  test_database.cpp  test_integration.cpp  test_models.cpp  test_transactions.cpp  test_validation.cpp
